# oai

./: .gitignore  .gitmodules  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yaml  ci.yml  codeql.yml  rust-clippy.yml  rust.yml
.obsidian/: app.json  workspace.json
cli/: Cargo.toml  README.md
client/: Cargo.toml  README.md
client/src/: lib.rs  models.rs
client/src/api/: curie.rs  davinci.rs  davinci_codex.rs  davinci_instruct.rs
client/src/traits/: fine-tunes.rs  mod.rs  moderations.rs
dev/: Cargo.toml
examples/oai-actix/: Cargo.toml
sandbox/: Cargo.toml
sandbox/src/: main.rs
src/: lib.rs  main.rs  models.rs
src/api/: ada.rs  babbage.rs  content.rs
