[workspace]
members = [
  "client",
  "cli",
  "sandbox",
]
default-members = ["sandbox"]
[package]
name = "oai"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"
path = "client/src/lib.rs"

[[bin]]
name = "cli"
path = "cli/src/bin.rs"

[[bin]]
name = "sandbox"
path = "sandbox/src/main.rs"

[dependencies]
serde = { version = "1.0.154", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
reqwest = "0.11.14"
tokio = { version = "1.26.0", features = ["full"] }