[workspace]
members = [
  "client",
  "sandbox",
]
default-members = ["sandbox"]
[package]
name = "oai"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"
path = "client/src/lib.rs"

[[bin]]
name = "sandbox"
path = "sandbox/src/main.rs"

[dependencies]
serde = "1.0.154"
serde_json = "1.0.94"
reqwest = "0.11.14"
tokio = { version = "1.26.0", features = ["full"] }
