[workspace]
members = [
  "client",
  "sandbox",
]
default-members = ["sandbox"]
[package]
name = "oai"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"
path = "client/src/lib.rs"

[[bin]]
name = "sandbox"
path = "sandbox/src/main.rs"

[dependencies]
serde = "1.0.154"
serde_json = "1.0.94"
reqwest = "0.11.14"
tokio = { version = "1.26.0", features = ["full"] }
dotenv = "0.15.0"
fern = "0.6.1"
log = "0.4.17"
chrono = "0.4.23"