[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
fern = "0.6.1"