[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"
path = "client/src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.154", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
reqwest = "0.11.14"